--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,15 @@
 </head>
 
 <body>
-  <main>
-    <h1>Vanilla JavaScript App</h1>
-  </main>
+  <input id="input">
+  <div id="output">Aca va el output</div>
+  <button onclick="show()">click</button>
+  
+  <script type="text/javascript">
+  function show() {
+      document.getElementById('output').innerHTML = document.getElementById('input').value;
+  }
+  </script>
 </body>
 
 </html>
